[tool.poetry]
name = "starlite-pg-redis-docker"
version = "0.1.0"
description = "An example Starlite stack with Redis, Postgres and Docker"
authors = ["yudjinn <yudjinncoding@gmail.com>", "Peter Schutt <peter.github@proton.me>"]
packages = [{include = "app" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7"
asyncpg = "^0.25"
gunicorn = "^20.1"
passlib = { extras = ["bcrypt"], version = ">=1.7.4" }
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
redis = "^4.3"
hiredis = "^2.0"
sentry-sdk = "^1.5"
sqlalchemy = "^1.4"
uvicorn = {extras = ["standard"], version = "^0.17"}
uvloop = "^0.16.0"
starlite = "*"
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "*"
coverage = {extras = ["toml"], version = "*"}
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
sqlalchemy2-stubs = "*"
types-passlib = "*"
types-redis = "*"
types-requests = "*"

[tool.poetry.scripts]
pg-ready = "app.utils.postgres_ready:main"
redis-ready = "app.utils.redis_ready:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "src/app/utils/restartable_worker.py",
    "src/app/utils/redis_ready.py",
    "src/app/utils/postgres_ready.py",
]

[tool.mypy]
check_untyped_defs = true
exclude = ["alembic/*"]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "--cov=app -v --doctest-modules --doctest-glob=*.md"
markers = [
    "no_auto_patch_user",
]

[tool.pylint.MESSAGE_CONTROL]
disable = [
    "fixme",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-module-docstring",
    "super-init-not-called",
    "too-few-public-methods",
    "duplicate-code",
]
enable = "useless-suppression"
extension-pkg-whitelist = ["pydantic"]

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "88"

[tool.pylint.DESIGN]
max-args = 15
max-attributes = 20
max-locals = 30
max-returns = 15
max-branches = 15

[tool.pylint.VARIABLES]
ignored-argument-names = "args|kwargs|_|__"

[tool.pylint.BASIC]
good-names = "_,i,e,fn"